додала шість рівнів заголовків для порівняння

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body>
 <h1>Hello okten</h1>
+<h2>Hello okten</h2>
+<h3>Hello okten</h3>
+<h4>Hello okten</h4>
+<h5>Hello okten</h5>
+<h6>Hello okten</h6>
+
 </body>
 </html>
