--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
   <title>Document</title>
 </head>
 <body>
-<h1>Hello okten</h1>
-<h2>Hello okten</h2>
-<h3>Hello okten</h3>
-<h4>Hello okten</h4>
-<h5>Hello okten</h5>
-<h6>Hello okten</h6>
+<h1>LESSON 1</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
 
 </body>
 </html>
