додала картинку піони

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <h1>LESSON 1</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
+<img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів">
+
+
 
 </body>
 </html>
+
