--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
 <img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів">
+<img src="картинки/ромашки.jpg" alt="ромашки">
 
 
 
