--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів">
 <img src="images/ромашки.jpg" alt="ромашки">
 <ul>
-  <li> item </li>
+  <li><a href="https://www.gismeteo.ua/ua/weather-chernihiv-4923/">погода</a> </li>
   <li> item </li>
   <li> item </li>
   <li> item </li>
