--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>LESSON 1</h1>
-<p><span>Lorem ipsum</span> dolor sit amet, consectetur adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
+<p><span>Lorem ipsum</span> dolor sit <u>amet</u>, <i>consectetur</i> adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
 <p><b>Lorem ipsum</b> dolor sit amet, <strong>consectetur</strong> adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
 <img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів">
 <img src="images/ромашки.jpg" alt="ромашки">
