--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+   ul> li {
+      background: red;
+    }
+  </style>
+
 </head>
 <body>
 <h1>LESSON 1</h1>
