додала коментарії розробника

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p>м<sub>2</sub></p>
 <img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів" width="1000">
 <img src="images/ромашки.jpg" alt="ромашки" width="700" height="700">
-<!--ренрен-->
+<!-- ctr + /-->
 <ul>
   <li><a href="https://www.gismeteo.ua/ua/weather-chernihiv-4923/" target="_blank">погода</a> </li>
   <li> item </li>
@@ -32,8 +32,7 @@
   <li> item </li>
   <li> item </li>
 </ol>
-<!---rtgregtry----------->
-
+<!---rtgregtry----------
 
 
 </body>
