додала до 30 ур

--- a/index.html
+++ b/index.html
@@ -10,30 +10,260 @@
 
 </head>
 <body>
-<h1>LESSON 1</h1>
-<p><span>Lorem ipsum</span> dolor sit <u>amet</u>, <i>consectetur</i> adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
-<p><b>Lorem ipsum</b> dolor sit amet, <strong>consectetur</strong> adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>
-<p>м<sup>2</sup></p>
-<p>м<sub>2</sub></p>
-<img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів" width="1000">
-<img src="images/ромашки.jpg" alt="ромашки" width="700" height="700">
-<!-- ctr + /-->
-<ul>
-  <li><a href="https://www.gismeteo.ua/ua/weather-chernihiv-4923/" target="_blank">погода</a> </li>
-  <li> item </li>
-  <li> item </li>
-  <li> item </li>
-  <li> item </li>
-</ul>
-<ol>
-  <li> item </li>
-  <li> item </li>
-  <li> item </li>
-  <li> item </li>
-  <li> item </li>
-</ol>
-<!---rtgregtry----------
+<!--<h1>LESSON 1</h1>-->
+<!--<p><span>Lorem ipsum</span> dolor sit <u>amet</u>, <i>consectetur</i> adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>-->
+<!--<p><b>Lorem ipsum</b> dolor sit amet, <strong>consectetur</strong> adipisicing elit. A, adipisci aliquam at atque consectetur corporis deserunt dicta distinctio eius enim laborum minus mollitia neque nisi perferendis quibusdam quo reprehenderit vitae?</p>-->
+<!--<p>м<sup>2</sup></p>-->
+<!--<p>м<sub>2</sub></p>-->
+<!--<img src="https://oir.mobi/uploads/posts/2021-09/1632249424_19-oir-mobi-p-zhivie-pioni-tsveti-krasivo-foto-20.jpg" alt="букет піонів" width="1000">-->
+<!--<img src="images/ромашки.jpg" alt="ромашки" width="700" height="700">-->
+<!--&lt;!&ndash; ctr + /&ndash;&gt;-->
+<!--<ul>-->
+<!--  <li><a href="https://www.gismeteo.ua/ua/weather-chernihiv-4923/" target="_blank">погода</a> </li>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--</ul>-->
+<!--<ol>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--  <li> item </li>-->
+<!--</ol>-->
+<!--&lt;!&ndash;-Таблиця&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;&ndash;&gt;-->
+<!--<table border="1" width="300" height="200">-->
+<!--	&lt;!&ndash;Це буде перший ряд таблиці&ndash;&gt;-->
+<!--  <tr>-->
+<!--    <td>ячейка 1</td>-->
+<!--    <td>ячейка 2</td>-->
+<!--    <td>ячейка 3</td>-->
+<!--  </tr>-->
 
+<!--  &lt;!&ndash;Це буде другий ряд таблиці:&ndash;&gt;-->
+<!--  <tr>-->
+<!--    <td>ячейка 4</td>-->
+<!--    <td>ячейка 5</td>-->
+<!--    <td>ячейка 6</td>-->
+<!--  </tr>-->
+
+<!--  &lt;!&ndash;Це буде третій ряд таблиці:&ndash;&gt;-->
+<!--  <tr>-->
+<!--    <td>ячейка 7</td>-->
+<!--    <td>ячейка 8</td>-->
+<!--    <td>ячейка 9</td>-->
+<!--  </tr>-->
+<!--</table>-->
+
+<!--<ul>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--</ul>-->
+
+<!--<p>-->
+<!--  какой-то <i>текст</i> в абзаце-->
+<!--</p>-->
+
+<!--<p>-->
+<!--  какой-то <b>текст</b> в абзаце-->
+<!--</p-->
+
+<!--<ul>-->
+<!--  <li>текст</li>-->
+<!--  <li>текст</li>-->
+<!--  <li>текст</li>-->
+<!--</ul>-->
+
+
+<!--<ul>-->
+<!--  <li>текст <i>курсив</i> текст</li>-->
+<!--  <li>текст <i>курсив</i> текст</li>-->
+<!--  <li>текст <i>курсив</i> текст</li>-->
+<!--</ul>-->
+
+<!--<ul>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--</ul>-->
+<!--<ol>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--  <li>пункт</li>-->
+<!--</ol>-->
+
+<!--<ul>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--  <li>пункт <i>курсив</i></li>-->
+<!--</ul>-->
+
+<!--<p>-->
+<!--  текст абзаца <i>курсив</i>-->
+<!--</p>-->
+<!--<p>-->
+<!--  текст абзаца <i>курсив</i>-->
+<!--</p>-->
+
+<!--<p>-->
+<!--  текст абзаца <b><i>жирный курсив</i></b>-->
+<!--</p>-->
+<!--<p>-->
+<!--  текст абзаца <i>курсив</i>-->
+<!--</p>-->
+
+<!--<p>-->
+<!--  текст <b><i>жирный курсив</i></b>-->
+<!--</p>-->
+<!--<p>-->
+<!--  текст <i>просто курсив</i>-->
+<!--</p>-->
+
+<!--<ul>-->
+<!--  <li>-->
+<!--    <i>курсив</i>-->
+<!--    <b>жирный</b>-->
+<!--    <b><i>жирный курсив</i></b>-->
+<!--  </li>-->
+<!--  <li>-->
+<!--    <i>курсив</i>-->
+<!--    <b>жирный</b>-->
+<!--    <b><i>жирный курсив</i></b>-->
+<!--  </li>-->
+<!--</ul>-->
+
+<!--<p class="eee">-->
+<!--  абзац с классом eee-->
+<!--</p>-->
+<!--<p class="eee">-->
+<!--  абзац с классом eee-->
+<!--</p>-->
+<!--<p class="zzz">-->
+<!--  абзац с классом zzz-->
+<!--</p>-->
+<!--<p class="zzz">-->
+<!--  абзац с классом zzz-->
+<!--</p>-->
+
+<!--<ul>-->
+<!--  <li class="odd">пункт</li>-->
+<!--  <li class="eve">пункт</li>-->
+<!--  <li class="odd">пункт</li>-->
+<!--  <li class="eve">пункт</li>-->
+<!--  <li class="odd">пункт</li>-->
+<!--  <li class="eve">пункт</li>-->
+<!--</ul>-->
+
+<!--<p>-->
+<!--  какой-то <span class="red">текст</span> в абзаце-->
+<!--</p>-->
+
+<!--<p>-->
+<!--  Lorem ipsum <span class="xxx">dolor sit</span> amet.-->
+<!--</p>-->
+<!--<p>-->
+<!--  <span class="xxx">Lorem ipsum</span> dolor sit amet.-->
+<!--</p>-->
+
+<!--<div class="block1">-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="block2">-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+
+
+<!--<div class="ewe">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="pro">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="aba">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+
+<!--<div class="ubu">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="era">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="ubu">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="era">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
 
 </body>
 </html>
