--- a/index.html
+++ b/index.html
@@ -265,6 +265,105 @@
 <!--  </p>-->
 <!--</div>-->
 
+<!--<h2 class="header">заголовок</h2>-->
+<!--<h2 class="header">заголовок</h2>-->
+<!--<h3 class="header">заголовок</h3>-->
+<!--<h3 class="header">заголовок</h3>-->
+
+<!--<div class="block">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="block">-->
+<!--  <h2>заголовок</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+
+<!--<p class="eee">-->
+<!--  текст <i>курсив</i>-->
+<!--</p>-->
+<!--<p class="eee">-->
+<!--  текст <i>курсив</i>-->
+<!--</p>-->
+<!--<div class="eee">-->
+<!--  текст <i>курсив</i>-->
+<!--</div>-->
+<!--<div class="eee">-->
+<!--  текст <i>курсив</i>-->
+<!--</div>-->
+
+<!--<div class="block">-->
+<!--  <h2 class="header">заголовок h2</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+
+<!--  <h3 class="header">заголовок h3</h3>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+<!--<div class="block">-->
+<!--  <h2 class="header">заголовок h2</h2>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+
+<!--  <h3 class="header">заголовок h3</h3>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    текст-->
+<!--  </p>-->
+<!--</div>-->
+
+<!--<div id="elem">-->
+<!--  <h2>выбрать</h2>-->
+<!--  <p>не выбирать</p>-->
+
+<!--  <h2>выбрать</h2>-->
+<!--  <p>не выбирать</p>-->
+<!--</div>-->
+
+<!--<h2>не выбирать</h2>-->
+<!--<p>не выбирать</p>-->
+
+<!--<div id="elem">-->
+<!--  <p class="text">не выбирать</p>-->
+<!--  <p class="text">не выбирать</p>-->
+
+<!--  <ul>-->
+<!--    <li class="text">выбрать</li>-->
+<!--    <li class="text">выбрать</li>-->
+<!--    <li class="text">выбрать</li>-->
+<!--    <li>не выбирать</li>-->
+<!--    <li>не выбирать</li>-->
+<!--  </ul>-->
+<!--</div>-->
+
+<!--<p class="text">не выбирать</p>-->
+
+<p class="eee">
+  абзац
+</p>
+<p class="zzz">
+  абзац
+</p>
+<p class="eee zzz">
+  абзац
+</p>
+
+
+
+
 </body>
 </html>
 
