Выбор элемента по нескольким классам на CSS

--- a/index.html
+++ b/index.html
@@ -351,16 +351,22 @@
 
 <!--<p class="text">не выбирать</p>-->
 
+
+<!--<p class="eee">-->
+
+
 <p class="eee">
   абзац
 </p>
 <p class="zzz">
   абзац
 </p>
-<p class="eee zzz">
+<p class="ccc">
   абзац
 </p>
-
+<p class="eee zzz ccc">
+  абзац
+</p>
 
 
 
