Универсальный селектор * позволяет выбирать все элементы.

--- a/index.html
+++ b/index.html
@@ -476,20 +476,34 @@
 <!--  - -->
 <!--</p>-->
 
-<div>
-  <p class="test">
-    text
-  </p>
-  <p>
-    +
-  </p>
-  <p>
-    +
-  </p>
-</div>
-<p>
-  -
-</p>
+<!--<div>-->
+<!--  <p class="test">-->
+<!--    text-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    +-->
+<!--  </p>-->
+<!--  <p>-->
+<!--    +-->
+<!--  </p>-->
+<!--</div>-->
+<!--<p>-->
+<!--  - -->
+<!--</p>-->
+
+<main>
+  <p>-</p>
+  <p>-</p>
+
+  <div>
+    <p>+</p>
+    <p>+</p>
+  </div>
+  <section>
+    <p>+</p>
+    <p>+</p>
+  </section>
+</main>
 
 
 
