Состояния ссылок на CSS

--- a/index.html
+++ b/index.html
@@ -491,19 +491,21 @@
 <!--  - -->
 <!--</p>-->
 
-<main>
-  <p>-</p>
-  <p>-</p>
+<!--<main>-->
+<!--  <p>-</p>-->
+<!--  <p>-</p>-->
 
-  <div>
-    <p>+</p>
-    <p>+</p>
-  </div>
-  <section>
-    <p>+</p>
-    <p>+</p>
-  </section>
-</main>
+<!--  <div>-->
+<!--    <p>+</p>-->
+<!--    <p>+</p>-->
+<!--  </div>-->
+<!--  <section>-->
+<!--    <p>+</p>-->
+<!--    <p>+</p>-->
+<!--  </section>-->
+<!--</main>-->
+
+<a href="#">ссылка</a>
 
 
 
