Сложные селекторы с состояниями ссылок на CSS

--- a/index.html
+++ b/index.html
@@ -505,11 +505,17 @@
 <!--  </section>-->
 <!--</main>-->
 
-<a href="#">ссылка</a>
+<!--<a href="#">ссылка</a>-->
 
+<!--<div id="block">-->
+<!--  <a href="#">ссылка</a>-->
+<!--  <a href="#">ссылка</a>-->
+<!--  <a href="#">ссылка</a>-->
+<!--</div>-->
 
-
-
+<a href="#" class="eee">ссылка</a>
+<a href="#" class="eee">ссылка</a>
+<a href="#" class="eee">ссылка</a>
 
 <!--</body>-->
 <!--</html>-->
