background-color задаем цвет фона

--- a/index.html
+++ b/index.html
@@ -513,9 +513,13 @@
 <!--  <a href="#">ссылка</a>-->
 <!--</div>-->
 
-<a href="#" class="eee">ссылка</a>
-<a href="#" class="eee">ссылка</a>
-<a href="#" class="eee">ссылка</a>
+<!--<a href="#" class="eee">ссылка</a>-->
+<!--<a href="#" class="eee">ссылка</a>-->
+<!--<a href="#" class="eee">ссылка</a>-->
+
+<div id="elem">
+  Lorem ipsum dolor sit amet.
+</div>
 
 <!--</body>-->
 <!--</html>-->
