Установка фонового цвета на CSS

--- a/index.html
+++ b/index.html
@@ -517,9 +517,22 @@
 <!--<a href="#" class="eee">ссылка</a>-->
 <!--<a href="#" class="eee">ссылка</a>-->
 
+<!--<div id="elem">-->
+<!--  Lorem ipsum dolor sit amet.-->
+<!--</div>-->
+
+<!--<div id="elem">-->
+<!--  Lorem ipsum dolor sit amet.-->
+<!--</div>-->
+
 <div id="elem">
-  Lorem ipsum dolor sit amet.
+  text text text
 </div>
+
+
+
+
+
 
 <!--</body>-->
 <!--</html>-->
