Основы работы с границами на CSS

--- a/index.html
+++ b/index.html
@@ -525,10 +525,11 @@
 <!--  Lorem ipsum dolor sit amet.-->
 <!--</div>-->
 
-<div id="elem">
-  text text text
-</div>
+<!--<div id="elem">-->
+<!--  text text text-->
+<!--</div>-->
 
+<div id="elem"></div>
 
 
 
