--- a/index.html
+++ b/index.html
@@ -529,7 +529,15 @@
 <!--  text text text-->
 <!--</div>-->
 
-<div id="elem"></div>
+<!--<div id="elem"></div>-->
+
+<div id="menu">
+  <a href="#">link text 1</a>
+  <a href="#" class="active">link text 2</a>
+  <a href="#">link text 3</a>
+  <a href="#">link text 4</a>
+  <a href="#">link text 5</a>
+</div>
 
 
 
