border: 1px solid red;

--- a/index.html
+++ b/index.html
@@ -531,13 +531,49 @@
 
 <!--<div id="elem"></div>-->
 
-<div id="menu">
-  <a href="#">link text 1</a>
-  <a href="#" class="active">link text 2</a>
-  <a href="#">link text 3</a>
-  <a href="#">link text 4</a>
-  <a href="#">link text 5</a>
-</div>
+<!--<div id="menu">-->
+<!--  <a href="#">link text 1</a>-->
+<!--  <a href="#" class="active">link text 2</a>-->
+<!--  <a href="#">link text 3</a>-->
+<!--  <a href="#">link text 4</a>-->
+<!--  <a href="#">link text 5</a>-->
+<!--</div>-->
+
+<!--<div id="elem">-->
+<!--  Lorem ipsum dolor sit amet.-->
+<!--</div>-->
+
+<!--<div id="elem">-->
+
+<!--</div>-->
+
+<!--<div id="elem"></div>-->
+
+border: 1px solid red;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
