--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 
 <!--<div id="elem"></div>-->
 
-border: 1px solid red;
+<!--border: 1px solid red;-->
 
 
 
@@ -579,6 +579,7 @@ border: 1px solid red;
 
 
 
+<script type="text/javascript"  src="main.js"></script>
 <!--</body>-->
 <!--</html>-->
 
